--- a/src/main_web/index_template.html
+++ b/src/main_web/index_template.html
@@ -58,7 +58,7 @@
 				// Calls any procedure marked with @init
 				e._start();
 
-				// See source/main_web/main_web.odin for main_start,
+				// See src/main_web/main_web.odin for main_start,
 				// main_update and main_end.
 				e.main_start();
 
